# Dataviz

./: .env.example  .gitignore  .replit  README.md  ab_testing.py  api_server.py  app.py  auto_viz.py  data_context.py  forecasting_engine.py  formula_builder.py  pyproject.toml  report_scheduler.py  requirements-all.txt  requirements.txt  start_fast.py  streaming_engine.py  test_db.py
.streamlit/: config.toml
attached_assets/: Pasted-2025-06-17-12-01-11-086-WARNING-streamlit-config-browser-showWarningOnDirectExecution-is-not-a-va-1750161761620_1750161761621.txt  Pasted-Core-Data-Functionality-File-Handling-Data-Import-CSV-file-upload-and-parsing-Excel-file-upload-a-1750158507625_1750158507626.txt  Pasted-Create-a-modern-data-analytics-and-visualization-web-application-using-Python-with-the-following-com-1750156822897_1750156822898.txt
tests/: test_ab_testing.py  test_api_server.py  test_data_context.py  test_forecasting_engine.py  test_streaming_engine.py
