[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "openai>=1.88.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pymongo>=4.6.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
]
